--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -1,4 +1,66 @@
 {
+  "fpsm.shop.title.cooldown": "Remaining purchase time %1$s",
+  "fpsm.shop.title.min.money": "Minimum amount for next round %1$s",
+  "fpsm.shop.slot.empty" : "None",
+  "fpsm.shop.title.equipment" : "Equipment",
+  "fpsm.shop.title.pistol" : "Pistol",
+  "fpsm.shop.title.mid_rank" : "Mid Rank",
+  "fpsm.shop.title.rifle" : "Rifle",
+  "fpsm.shop.title.throwable": "Throwable",
+  "fpsm.unknown_weapon": "Unknown Weapon",
+  "fpsm.item.bomb_disposal_kit.drop.message" : "You can't drop this item",
+
+  "key.fpsm.open.shop.desc": "Open gun shop",
+  "key.category.fpsm": "FPSMatch",
+  "key.fpsm.open.shop.failed.no_map": "Cannot open the store because you have not joined any maps",
+  "key.fpsm.open.shop.failed.game.not_started": "Cannot open the store because game not started",
+  "key.fpsm.open.shop.failed.purchase_time.expired": "Cannot open the store because purchase time expired",
+  "key.fpsm.open.shop.failed.left.purchase_area": "Cannot open the store because left purchase area",
+  "key.fpsm.open.shop.failed.game_type.no_shop": "Cannot open the store because joined game does not support store",
+  "key.fpsm.dismantle_bomb.desc": "Dismantle bomb",
+  "key.fpsm.custom.tab.on": "Custom Tab On",
+  "key.fpsm.custom.tab.off": "Custom Tab Off",
+  "key.fpsm.custom.tab.desc": "Switch Custom Tab",
+  "key.fpsm.hud.custom.desc": "Custom Game Hud",
+  "key.fpsm.hud.custom.on": "Custom Game Hud On",
+  "key.fpsm.hud.custom.off": "Custom Game Hud Off",
+  "key.fpsm.switch_previous_item.desc": "switch previous",
+
+  "commands.fpsm.debug.success": "FPSMatch Debug Mode : %1$s",
+  "commands.fpsm.save.success": "[FPSMatch] Saved successfully.",
+  "commands.fpsm.sync.success": "[FPSMatch] Sync operation completed successfully.",
+  "commands.fpsm.team.capability.invalid" : "Invalid team capability : %d",
+  "commands.fpsm.team.leave.failure": "team not found",
+  "commands.fpsm.shop.modify.success": "Successfully modified the shop slot type %2$d index %3$d for '%1$s' shop with item '%4$s' at a cost of %5$d.",
+  "commands.fpsm.shop.modify.failed": "Failed to modify the shop. Please check your permissions or if the shop exists.",
+  "commands.fpsm.modify.kits.add.success": "Successfully added start kit '%1$s' for team '%2$s'.",
+  "commands.fpsm.modify.kits.clear.success": "Successfully cleared start kits for team '%1$s'.",
+  "commands.fpsm.modify.kits.clear.failed": "Failed to clear start kits for team '%1$s'.",
+  "commands.fpsm.modify.kits.invalidAction": "Invalid action.",
+  "commands.fpsm.modify.kits.list.success": "Start kits list for team '%1$s': %2$d items.",
+  "commands.fpsm.modify.metp.success" : "[FPSMatch] Successfully set the end of the game teleport point '%1$s'",
+  "commands.fpsm.metp.not_available" : "[FPSMatch] Map %1$s is not an available match end teleport to point map.",
+  "commands.fpsm.shop.slot.modify.group.success": "[FPSMatch] Successfully modified group ID for shop type %1$s, slot C to %3$d.",
+  "commands.fpsm.shop.slot.modify.fail": "[FPSMatch] Unable to find %1$s shop from map %2$s.",
+  "commands.fpsm.shop.not_available": "[FPSMatch] Map %1$s is not an available shop map.",
+  "commands.fpsm.shop.slot.listener.remove.success": "[FPSMatch] Successfully removed listener module %1$s.",
+  "commands.fpsm.listener.add.success": "[FPSMatch] Successfully added listener module %1$s.",
+  "commands.fpsm.reload.success": "[FPSMatch] Reload operation completed successfully.",
+  "commands.fpsm.shop.modify.gun.success": "[FPSMatch] Successfully modified the %1$s shop slot %2$d to include '%3$s' with %4$d dummy ammo.",
+  "commands.fpsm.tacz.dummy.amount.empty_hand": "MainHand ItemStack is empty",
+  "commands.fpsm.tacz.dummy.amount.success": "Set dummy ammo amount for %s to %d",
+  "commands.fpsm.tacz.dummy.amount.invalid_gun": "Invalid gun data",
+  "commands.fpsm.tacz.dummy.amount.not_gun": "ItemStack is not a gun",
+  "commands.fpsm.capability.missing": "%d capability is not found",
+  "commands.fpsm.modify.shop.initialize.type_not_found": "Shop type not found: %s",
+  "commands.fpsm.modify.shop.initialize.success": "Initialized shop type %s for team %s with start money: %d",
+  "commands.fpsm.modify.shop.initialize.failed": "Failed to initialize shop type %s",
+  "commands.fpsm.modify.shop.not_initialized": "Shop is not initialized",
+  "commands.fpsm.modify.shop.reset.success": "Reset shop player data for team %s",
+  "commands.fpsm.modify.shop.sync.success": "Synced shop data for team %s",
+  "commands.fpsm.modify.shop.info": "Team: %s, Shop Type: %s, Start Money: %d, Player Count: %d",
+  "commands.fpsm.shop.modify.cost.success": "The price for slot %2$s of %1$s in the store has been changed to %3$s",
+  "commands.fpsm.shop.modify.item.success": "Successfully modified item in %1$s shop slot %2$s to %3$s",
   "commands.fpsm.only.player": "Only player can execute this command.",
   "commands.fpsm.debug.start.success": "The game on map '%1$s' has started.",
   "commands.fpsm.debug.reset.success": "The game on map '%1$s' has been reset.",
@@ -20,46 +82,41 @@
   "commands.fpsm.modify.spawn.set.missing_args": "Missing arguments. Please specify both 'from' and 'to' positions.",
   "commands.fpsm.modify.spawn.set.over_flow": "The area is too large! Maximum allowed distance between points is 11 blocks.",
   "commands.fpsm.modify.spawn.set.success" : "Successfully set %1$s spawn points for team %2$s in the specified area.",
-  "fpsm.shop.title.cooldown": "Remaining purchase time %1$s",
-  "fpsm.shop.title.min.money": "Minimum amount for next round %1$s",
-  "fpsm.shop.slot.empty" : "none",
-  "key.fpsm.open.shop.desc": "Open gun shop",
-  "key.category.fpsm": "FPSMatch",
-  "key.fpsm.open.shop.failed.no_map": "Cannot open the store because you have not joined any maps",
-  "key.fpsm.open.shop.failed.game.not_started": "Cannot open the store because game not started",
-  "key.fpsm.open.shop.failed.purchase_time.expired": "Cannot open the store because purchase time expired",
-  "key.fpsm.open.shop.failed.left.purchase_area": "Cannot open the store because left purchase area",
-  "key.fpsm.open.shop.failed.game_type.no_shop": "Cannot open the store because joined game does not support store",
-  "key.fpsm.dismantle_bomb.desc": "Dismantle bomb",
-  "commands.fpsm.team.capability.invalid" : "Invalid team capability : %d",
-  "commands.fpsm.team.leave.failure": "team not found",
-  "commands.fpsm.shop.modify.success": "Successfully modified the shop slot type %2$d index %3$d for '%1$s' shop with item '%4$s' at a cost of %5$d.",
-  "commands.fpsm.shop.modify.failed": "Failed to modify the shop. Please check your permissions or if the shop exists.",
-  "commands.fpsm.modify.kits.add.success": "Successfully added start kit '%1$s' for team '%2$s'.",
-  "commands.fpsm.modify.kits.clear.success": "Successfully cleared start kits for team '%1$s'.",
-  "commands.fpsm.modify.kits.clear.failed": "Failed to clear start kits for team '%1$s'.",
-  "commands.fpsm.modify.kits.invalidAction": "Invalid action.",
-  "commands.fpsm.modify.kits.list.success": "Start kits list for team '%1$s': %2$d items.",
-  "commands.fpsm.modify.metp.success" : "[FPSMatch] Successfully set the end of the game teleport point '%1$s'",
-  "commands.fpsm.metp.not_available" : "[FPSMatch] Map %1$s is not an available match end teleport to point map.",
-  "key.fpsm.custom.tab.on": "Custom Tab On",
-  "key.fpsm.custom.tab.off": "Custom Tab Off",
-  "key.fpsm.custom.tab.desc": "Switch Custom Tab",
-  "commands.fpsm.save.success": "[FPSMatch] Saved successfully.",
-  "commands.fpsm.sync.success": "[FPSMatch] Sync operation completed successfully.",
-  "commands.fpsm.shop.slot.modify.group.success": "[FPSMatch] Successfully modified group ID for shop type %1$s, slot C to %3$d.",
-  "commands.fpsm.shop.slot.modify.fail": "[FPSMatch] Unable to find %1$s shop from map %2$s.",
-  "commands.fpsm.shop.not_available": "[FPSMatch] Map %1$s is not an available shop map.",
-  "commands.fpsm.shop.slot.listener.remove.success": "[FPSMatch] Successfully removed listener module %1$s.",
-  "commands.fpsm.listener.add.success": "[FPSMatch] Successfully added listener module %1$s.",
-  "commands.fpsm.reload.success": "[FPSMatch] Reload operation completed successfully.",
-  "commands.fpsm.shop.modify.gun.success": "[FPSMatch] Successfully modified the %1$s shop slot %2$d to include '%3$s' with %4$d dummy ammo.",
-  "fpsm.shop.title.equipment" : "Equipment",
-  "fpsm.shop.title.pistol" : "Pistol",
-  "fpsm.shop.title.mid_rank" : "Mid Rank",
-  "fpsm.shop.title.rifle" : "Rifle",
-  "fpsm.shop.title.throwable": "Throwable",
-  "fpsm.item.bomb_disposal_kit.drop.message" : "you can't drop this item",
+  "commands.fpsm.help.header": "§6===== FPSM Command Help =====\n",
+  "commands.fpsm.help.footer": "§eUse §6TAB key §efor auto-completion",
+  "commands.fpsm.help.page_info": "Page %d of %d",
+  "commands.fpsm.help.basic.help": "§a/fpsm help §7- Show this help message",
+  "commands.fpsm.help.basic.save": "§a/fpsm save §7- Save all data",
+  "commands.fpsm.help.basic.sync": "§a/fpsm sync §7- Sync shop data",
+  "commands.fpsm.help.basic.reload": "§a/fpsm reload §7- Reload configuration",
+  "commands.fpsm.help.capability.info": "§a/fpsm help capability <map|team> [page <page>] §7- Show capability commands help",
+  "commands.fpsm.help.capability.map.header": "§6===== Map Capability Command Help =====\n",
+  "commands.fpsm.help.capability.team.header": "§6===== Team Capability Command Help =====\n",
+  "commands.fpsm.help.capability.shop.initialize": "  §b• initialize <type> [startMoney] §7- Initialize shop with specified type and start money",
+  "commands.fpsm.help.capability.shop.reset": "  §b• reset §7- Reset shop player data",
+  "commands.fpsm.help.capability.shop.sync": "  §b• sync §7- Sync shop data",
+  "commands.fpsm.help.capability.shop.info": "  §b• info §7- Show shop information",
+  "commands.fpsm.help.capability.shop.modify": "  §b• modify §7- Modify shop settings",
+  "commands.fpsm.help.capability.spawnpoints.add": "  §b• add §7- Add spawn point at current location",
+  "commands.fpsm.help.capability.spawnpoints.clear": "  §b• clear §7- Clear spawn points for the team",
+  "commands.fpsm.help.capability.spawnpoints.clear_all": "  §b• clear_all §7- Clear all spawn points for all teams",
+  "commands.fpsm.help.capability.spawnpoints.set": "  §b• set <from> <to> §7- Set spawn points in specified area",
+  "commands.fpsm.help.capability.kits.add": "  §b• add [item] [amount] §7- Add item to start kits",
+  "commands.fpsm.help.capability.kits.clear": "  §b• clear §7- Clear all start kits",
+  "commands.fpsm.help.capability.kits.list": "  §b• list §7- List all start kits",
+  "commands.fpsm.help.capability.match_end_teleport_point.set": "  §b• set <point> §7- Set match end teleport point",
+  "commands.fpsm.help.capability.demolition.bomb_area.add": "  §b• bomb_area add <from> <to> §7- Add bomb area",
+  "commands.fpsm.help.category.basic": "Basic Commands",
+  "commands.fpsm.help.category.listener": "Listener Module Commands",
+  "commands.fpsm.help.listener.add_change_item": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- Add item change listener module",
+  "commands.fpsm.help.category.map": "Map Commands",
+  "commands.fpsm.help.map.create": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- Create map",
+  "commands.fpsm.help.map.modify": "§a/fpsm map modify <gameType> <mapName> §7- Map configuration",
+  "commands.fpsm.help.map.debug": "   §b• debug <start|reset|newRound|cleanup|switch> §7- Debug commands",
+  "commands.fpsm.help.map.team_join_leave": "   §b• team join/leave [targets] §7- Join/leave team",
+  "commands.fpsm.help.map.team_players": "   §b• team teams <teamName> players <targets> <action> §7- Team player operations",
+
+  "itemGroup.tab.fpsm": "FPSMatch",
   "item.fpsmatch.smoke_shell" : "Smoke Shell",
   "item.fpsmatch.bomb_disposal_kit" : "Bomb Disposal Kit",
   "item.fpsmatch.flash_bomb" : "Flash Bomb",
@@ -68,37 +125,28 @@
   "item.fpsmatch.t_incendiary_grenade" : "Incendiary Grenade",
   "item.fpsmatch.bulletproof_armor" : "TestItem - Bulletproof Armor",
   "item.fpsmatch.bulletproof_with_helmet" : "TestItem - Bulletproof Armor with Helmet",
-  "fpsmatch.tab.header.player": "Player",
-  "fpsmatch.tab.header.kills": "Kills",
-  "fpsmatch.tab.header.deaths": "Deaths",
-  "fpsmatch.tab.header.assists": "Assists",
-  "fpsmatch.tab.header.damage": "Damage",
-  "fpsmatch.tab.header.money": "Money",
-  "fpsmatch.tab.header.headshot": "Headshot Rate",
-  "key.fpsm.hud.custom.desc": "Custom Game Hud",
-  "key.fpsm.hud.custom.on": "Custom Game Hud On",
-  "key.fpsm.hud.custom.off": "Custom Game Hud Off",
-  "commands.fpsm.mvp.success": "success add %2$s mvp music to %1$s players",
-  "commands.fpsm.shop.modify.cost.success": "The price for slot %2$s of %1$s in the store has been changed to %3$s",
-  "commands.fpsm.shop.modify.item.success": "Successfully modified item in %1$s shop slot %2$s to %3$s",
-  "gui.fpsm.shop_editor.title": "Shop Editor",
-  "gui.fpsm.edit_shop_slot.title": "Edit Current Slot",
-  "gui.fpsm.shop_editor.save_button": "Confirm and save",
   "item.fpsmatch.shop_edit_tool": "shop edit tool",
-  "tooltip.fpsm.shop_edit_tool.map_selected": "Current Selected Map :",
-  "tooltip.fpsm.shop_edit_tool.team_selected": "Current Selected Team :",
+
   "message.fpsm.shop_edit_tool.all_maps": "All Available Maps :",
   "message.fpsm.shop_edit_tool.all_shops": "All Available Shops :",
   "message.fpsm.shop_edit_tool.select_map": "You choose Map :",
   "message.fpsm.shop_edit_tool.select_and_join_shop": "You choose Shop and join Team :",
   "message.fpsm.shop_edit_tool.missing_map": "No Map is available!",
   "message.fpsm.shop_edit_tool.missing_shop": "No Shop is available!",
-  "itemGroup.tab.fpsm": "FPSMatch",
+  "message.fpsmatch.error.no_spawn_points": "There is no spawn-points for the game to start",
+  "message.fpsmatch.error.not_enough_spawn_points": "There are not enough spawn-points for the game to start",
+
+  "gui.fpsm.shop_editor.title": "Shop Editor",
+  "gui.fpsm.edit_shop_slot.title": "Edit Current Slot",
+  "gui.fpsm.shop_editor.save_button": "Confirm and save",
   "gui.fpsm.dummyAmmo": "Dummy Ammo",
   "gui.fpsm.name": "Name",
   "gui.fpsm.price": "Price",
   "gui.fpsm.group": "GroupID",
   "gui.fpsm.listener": "Listening Module",
+
+  "tooltip.fpsm.shop_edit_tool.map_selected": "Current Selected Map :",
+  "tooltip.fpsm.shop_edit_tool.team_selected": "Current Selected Team :",
   "tooltip.fpsm.separator": "======================",
   "tooltip.fpsm.selected_map": "Current Selected Map",
   "tooltip.fpsm.selected_shop": "Current Selected Shop",
@@ -107,18 +155,6 @@
   "tooltip.fpsm.switch_shop": "[SHIFT + Right Click] Switch Shop",
   "tooltip.fpsm.switch_map": "[SHIFT + Left Click] Switch Map",
   "tooltip.fpsm.open_editor": "[Right Click] Open Shop Editor",
-  "message.fpsmatch.error.no_spawn_points": "There is no spawn-points for the game to start",
-  "message.fpsmatch.error.not_enough_spawn_points": "There are not enough spawn-points for the game to start",
-  "key.fpsm.switch_previous_item.desc": "switch previous",
-
-  "commands.fpsm.help.header": "§6===== FPSM Command Help =====\n",
-  "commands.fpsm.help.basic": "§a/fpsm help §7- Show this help message\n§a/fpsm save §7- Save all data\n§a/fpsm sync §7- Sync shop data\n§a/fpsm reload §7- Reload configuration\n",
-  "commands.fpsm.help.listener": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- Add item change listener module\n",
-  "commands.fpsm.help.shop": "§a/fpsm shop <gameType> <mapName> modify set <shopName> <shopType> <shopSlot> §7- Shop configuration\n   §b• listener_module add/remove <module> §7- Add/remove listener module\n   §b• group_id <id> §7- Set group ID\n   §b• cost <amount> §7- Set price\n   §b• item §7- Set item (held item)\n   §b• dummy_ammo_amount <amount> §7- Set dummy ammo amount\n",
-  "commands.fpsm.help.map": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- Create map\n§a/fpsm map modify <gameType> <mapName> §7- Map configuration\n   §b• match_end_teleport_point <point> §7- Set match end teleport point\n   §b• bomb_area add <from> <to> §7- Add bomb area\n   §b• debug <start|reset|newRound|cleanup|switch> §7- Debug commands\n   §b• team join/leave [targets] §7- Join/leave team\n   §b• team teams spectator players <targets> <action> §7- Spectator operations\n   §b• team teams <teamName> kits <action> §7- Team kit configuration\n   §b• team teams <teamName> spawnpoints <action> §7- Spawnpoint configuration\n   §b• team teams <teamName> players <targets> <action> §7- Team player operations\n",
-  "commands.fpsm.help.footer": "§eUse §6TAB key §efor auto-completion",
-  "commands.fpsm.debug.success": "FPSMatch Debug Mode : %1$s",
-  "fpsm.unknown_weapon": "Unknown Weapon",
 
   "config.fpsmatch.client": "Client Settings",
   "config.fpsmatch.client.no_settings": "No client-specific settings currently",
@@ -147,17 +183,5 @@
   "config.fpsmatch.common.throwable.incendiary_grenade_damage": "Incendiary Grenade Damage",
   "config.fpsmatch.common.throwable.incendiary_grenade_damage.tooltip": "Damage value of incendiary grenades",
   "config.fpsmatch.common.throwable.smoke_shell_living_time": "Smoke Shell Living Time",
-  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "Survival time after smoke bomb activation (ticks). 20 ticks = 1 second",
-  "commands.fpsm.tacz.dummy.amount.empty_hand": "MainHand ItemStack is empty",
-  "commands.fpsm.tacz.dummy.amount.success": "Set dummy ammo amount for %s to %d",
-  "commands.fpsm.tacz.dummy.amount.invalid_gun": "Invalid gun data",
-  "commands.fpsm.tacz.dummy.amount.not_gun": "ItemStack is not a gun",
-  "commands.fpsm.capability.missing": "%d capability is not found",
-  "commands.fpsm.modify.shop.initialize.type_not_found": "Shop type not found: %s",
-  "commands.fpsm.modify.shop.initialize.success": "Initialized shop type %s for team %s with start money: %d",
-  "commands.fpsm.modify.shop.initialize.failed": "Failed to initialize shop type %s",
-  "commands.fpsm.modify.shop.not_initialized": "Shop is not initialized",
-  "commands.fpsm.modify.shop.reset.success": "Reset shop player data for team %s",
-  "commands.fpsm.modify.shop.sync.success": "Synced shop data for team %s",
-  "commands.fpsm.modify.shop.info": "Team: %s, Shop Type: %s, Start Money: %d, Player Count: %d"
+  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "Survival time after smoke bomb activation (ticks). 20 ticks = 1 second"
 }
