--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -65,17 +65,9 @@
   "item.fpsmatch.t_incendiary_grenade": "燃烧弹",
   "item.fpsmatch.bulletproof_armor": "测试物品 - 防弹护甲",
   "item.fpsmatch.bulletproof_with_helmet": "测试物品 - 防弹护甲与头盔",
-  "fpsmatch.tab.header.player": "玩家",
-  "fpsmatch.tab.header.kills": "击杀",
-  "fpsmatch.tab.header.deaths": "死亡",
-  "fpsmatch.tab.header.assists": "助攻",
-  "fpsmatch.tab.header.damage": "伤害",
-  "fpsmatch.tab.header.money": "金钱",
-  "fpsmatch.tab.header.headshot": "爆头率",
   "key.fpsm.hud.custom.desc": "自定义游戏UI",
   "key.fpsm.hud.custom.on": "自定义游戏UI 开启",
   "key.fpsm.hud.custom.off": "自定义游戏UI 关闭",
-  "commands.fpsm.mvp.success": "success add %2$s mvp music to %1$s players",
   "commands.fpsm.shop.modify.cost.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的价格修改为%3$s",
   "commands.fpsm.shop.modify.item.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的物品修改为%3$s",
   "gui.fpsm.shop_editor.title": "商店内容编辑器",
@@ -110,11 +102,25 @@
   "commands.fpsm.metp.not_available": "[FPSMatch] 地图 %1$s 不支持设置游戏结束传送点。",
   "commands.fpsm.modify.metp.success": "[FPSMatch] 成功设置了游戏结束传送点 '%1$s'",
   "commands.fpsm.help.header": "§6===== FPSM 命令帮助 =====\n",
-  "commands.fpsm.help.basic": "§a/fpsm help §7- 显示此帮助信息\n§a/fpsm save §7- 保存所有数据\n§a/fpsm sync §7- 同步商店数据\n§a/fpsm reload §7- 重新加载配置\n",
-  "commands.fpsm.help.listener": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- 添加物品变更监听模块\n",
-  "commands.fpsm.help.shop": "§a/fpsm shop <gameType> <mapName> modify set <shopName> <shopType> <shopSlot> §7- 商店配置\n   §b• listener_module add/remove <module> §7- 添加/移除监听模块\n   §b• group_id <id> §7- 设置组ID\n   §b• cost <amount> §7- 设置价格\n   §b• item §7- 设置物品(手持物品)\n   §b• dummy_ammo_amount <amount> §7- 设置虚拟弹药数量\n",
-  "commands.fpsm.help.map": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- 创建地图\n§a/fpsm map modify <gameType> <mapName> §7- 地图配置\n   §b• match_end_teleport_point <point> §7- 设置比赛结束传送点\n   §b• bomb_area add <from> <to> §7- 添加炸弹区域\n   §b• debug <start|reset|newRound|cleanup|switch> §7- 调试命令\n   §b• team join/leave [targets] §7- 加入/离开队伍\n   §b• team teams spectator players <targets> <action> §7- 观察者操作\n   §b• team teams <teamName> kits <action> §7- 队伍装备配置\n   §b• team teams <teamName> spawnpoints <action> §7- 重生点配置\n   §b• team teams <teamName> players <targets> <action> §7- 队伍玩家操作\n",
   "commands.fpsm.help.footer": "§e使用 §6TAB键 §e自动补全命令参数",
+  "commands.fpsm.help.page_info": "第 %d 页，共 %d 页",
+  
+  "commands.fpsm.help.category.basic": "基础命令",
+  "commands.fpsm.help.basic.help": "§a/fpsm help [page <页码>] §7- 显示帮助信息",
+  "commands.fpsm.help.basic.save": "§a/fpsm save §7- 保存所有数据",
+  "commands.fpsm.help.basic.sync": "§a/fpsm sync §7- 同步商店数据",
+  "commands.fpsm.help.basic.reload": "§a/fpsm reload §7- 重新加载配置",
+  
+  "commands.fpsm.help.category.listener": "监听模块命令",
+  "commands.fpsm.help.listener.add_change_item": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- 添加物品变更监听模块",
+  "commands.fpsm.help.category.map": "地图命令",
+  "commands.fpsm.help.map.create": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- 创建地图",
+  "commands.fpsm.help.map.modify": "§a/fpsm map modify <gameType> <mapName> §7- 地图配置",
+  "commands.fpsm.help.map.debug": "   §b• debug <start|reset|newRound|cleanup|switch> §7- 调试命令",
+  "commands.fpsm.help.map.team_join_leave": "   §b• team join/leave [targets] §7- 加入/离开队伍",
+  "commands.fpsm.help.map.team_players": "   §b• team teams <teamName> players <targets> <action> §7- 队伍玩家操作",
+  "commands.fpsm.help.capability.map.header": "§6===== 地图能力命令帮助 =====\n",
+  "commands.fpsm.help.capability.team.header": "§6===== 队伍能力命令帮助 =====\n",
 
   "config.fpsmatch.client": "客户端设置",
   "config.fpsmatch.client.no_settings": "当前没有客户端特定设置",
@@ -159,5 +165,19 @@
   "commands.fpsm.modify.shop.not_initialized": "商店尚未初始化",
   "commands.fpsm.modify.shop.reset.success": "已重置队伍 %s 的商店玩家数据",
   "commands.fpsm.modify.shop.sync.success": "已同步队伍 %s 的商店数据",
-  "commands.fpsm.modify.shop.info": "队伍：%s，商店类型：%s，初始资金：%d，玩家数量：%d"
+  "commands.fpsm.modify.shop.info": "队伍：%s，商店类型：%s，初始资金：%d，玩家数量：%d",
+  "commands.fpsm.help.capability.shop.initialize": "  §b• initialize <type> [startMoney] §7- 使用指定类型和初始资金初始化商店",
+  "commands.fpsm.help.capability.shop.reset": "  §b• reset §7- 重置商店玩家数据",
+  "commands.fpsm.help.capability.shop.sync": "  §b• sync §7- 同步商店数据",
+  "commands.fpsm.help.capability.shop.info": "  §b• info §7- 显示商店信息",
+  "commands.fpsm.help.capability.shop.modify": "  §b• modify §7- 修改商店设置",
+  "commands.fpsm.help.capability.spawnpoints.add": "  §b• add §7- 在当前位置添加出生点",
+  "commands.fpsm.help.capability.spawnpoints.clear": "  §b• clear §7- 清除队伍的出生点",
+  "commands.fpsm.help.capability.spawnpoints.clear_all": "  §b• clear_all §7- 清除所有队伍的出生点",
+  "commands.fpsm.help.capability.spawnpoints.set": "  §b• set <from> <to> §7- 在指定区域设置出生点",
+  "commands.fpsm.help.capability.kits.add": "  §b• add [item] [amount] §7- 向起始装备添加物品",
+  "commands.fpsm.help.capability.kits.clear": "  §b• clear §7- 清除所有起始装备",
+  "commands.fpsm.help.capability.kits.list": "  §b• list §7- 列出所有起始装备",
+  "commands.fpsm.help.capability.match_end_teleport_point.add": "  §b• add <point> §7- 设置比赛结束传送点",
+  "commands.fpsm.help.capability.demolition.bomb_area.add": "  §b• bomb_area add <from> <to> §7- 添加炸弹区域"
 }
